--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,16 +8,16 @@
   z-index: 1000;
   padding: 12px 28px;
   transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-  background: rgba(209, 230, 149, 0.049);
+  background: rgba(9, 9, 9, 0.049);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(30px);
   border-radius: 15px;
-  border: 30px solid rgba(247, 207, 77, 0.733);
+  border: 30px solid rgb(7, 7, 7);
   box-shadow: 
     0 8px 32px rgba(0, 0, 0, 0.2),
     0 4px 16px rgba(0, 0, 0, 0.1),
     0 0 20px rgba(233, 191, 53, 0.877),
-    inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    inset 0 1px 0 rgba(2, 2, 2, 0.1);
 }
 
 .navbar.scrolled {
