--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,7 +11,7 @@
   background: rgba(9, 9, 9, 0.049);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(30px);
-  border-radius: 15px;
+  border-radius: 25px;
   border: 30px solid rgb(7, 7, 7);
   box-shadow: 
     0 8px 32px rgba(0, 0, 0, 0.2),
@@ -27,7 +27,7 @@
   background: rgba(255, 255, 255, 0.08);
   backdrop-filter: blur(35px);
   -webkit-backdrop-filter: blur(35px);
-  border: 2px solid rgba(212, 175, 55, 0.5);
+  border: 2px solid rgb(255, 217, 4);
   box-shadow: 
     0 12px 48px rgba(0, 0, 0, 0.25),
     0 6px 24px rgba(0, 0, 0, 0.15),
